k8s/networking/gateway/gateway-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproute-to-gateway
  namespace: kube-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: networking
  to:
    - group: ""
      kind: HTTPRoute
