k8s/networking/gateway/fallback-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-fallback
  namespace: networking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: me.tale.envoy-fallback
  template:
    metadata:
      labels:
        app: me.tale.envoy-fallback
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: envoy-fallback
          image: halverneus/static-file-server
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: html
              mountPath: /web
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: html
          configMap:
            name: envoy-fallback-html
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-fallback
  namespace: networking
spec:
  selector:
    app: me.tale.envoy-fallback
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-envoy-fallback
  namespace: networking
spec:
  parentRefs:
    - name: envoy-gw
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: envoy-fallback
          port: 80
